--- a/.github/workflows/red.yml
+++ b/.github/workflows/red.yml
@@ -1,10 +1,52 @@
-name: Real ci/cd
+name: CI/CD Pipeline
 
-on: [workflow_dispatch]
+on: [push]
 
 jobs:
-  print:
+  build:
     runs-on: ubuntu-latest
-    steps: 
-        - name: Print to console
-          run: echo Hello GH Actions
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build
+      run: npm run build
+
+    - name: Test
+      run: npm test
+
+  deploy:
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    
+    # If you are deploying to a server, you could use the scp action to copy your build files to your server
+    - name: Deploy to Server
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USER }}
+        password: ${{ secrets.SERVER_PASS }}
+        source: "build/*"
+        target: "/path/to/deploy/directory/on/server"
+
+
+
+      
+
